* OTH#0000: Add missing translations and fix manual registration creation icon
* OTH#0000: Add ID in prestIJ request order
* FEA#9172: Add request group entry point and fix batchs
* OTH#0000: Fix file identifier computation
* FEA#9011: Handle covered subscriptions to the french prest IJ service
* OTH#0000: Encoding in iso-8859-1 rather than utf8
* FEA#9049: Add archiving, fixes and use siren (multiple companies per subscription)
* FEA#8862: Register legal entity to the prest ij service
* Module creation